--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
 	<div id="canvas_div">
-		<canvas id="main_canvas" height="600" width="800"></canvas>
+		<canvas id="map_canvas" height="600" width="800"></canvas>
+		<canvas id="scene_canvas" height="600" width="800"></canvas>
 	</div>
 	<script type="text/javascript">
-		Setup(document.getElementById("main_canvas"))
+		Setup(document.getElementById("scene_canvas"), document.getElementById("map_canvas"))
 	</script>
 </body>
 </html>
