Fixed collision. Still doesn't work properly.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<div id="canvas_div">
 		<canvas id="map_canvas" height="600" width="800"></canvas>
 		<canvas id="scene_canvas" height="600" width="800"></canvas>
+		<canvas id="debug_canvas" height="64" width="32"></canvas>
 	</div>
 	<script type="text/javascript">
 		Setup(document.getElementById("scene_canvas"), document.getElementById("map_canvas"))
